[nosetests]
verbosity = 2
detailed-errors = 1
with-coverage = 1
cover-package = pyglmnet
ignore-files = (benchmarks.py|datasets.py)

[flake8]
exclude = __init__.py,six.py,funcsigs.py
ignore =
  # W503 line break before binary operator (black prefers this to W504)
  W503,
  # E203 whitespace before ':' (a few conflicts with black)
  E203,
  # W605: invalid escape sequence 'x'. Conflicts with Sphinx math in docs
  W605

[metadata]
description-file = "README.md"
url = "https://github.com/glm-tools/pyglmnet"
